# Polecat-Ralph

./: .gitignore  Makefile  README.md
ralf-container/: README.md  pyproject.toml
ralf-container/ralf/: agent.py  main.py
ralf-container/tests/: test_main.py  test_tools.py
ralph-container/: README.md  output_prompts.txt  pyproject.toml
ralph-container/ralph/: RALF_LOOP_COMPARISON.md  agent.py  agent_state.py  cli.py  graph.py  llm.py  loop.py  main.py  react.py
ralph-container/ralph/config/: __init__.py
ralph-container/tests/: instructions0.md  instructions1.md  instructions2.md  test_ask.py  test_interactive_loop.py  test_llm.py  test_loop.py  test_main.py  test_ollama.py  test_prompt_loading.py  test_single_step_agent.py  test_tools.py
ralph-container/tests/test_data/: config.yaml
ralph-venv/: pyvenv.cfg
